improve queue size recommendations